# UltrAI_JFF

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Frontend Build Plan - Following UltrAI Methodology.txt  Makefile  QUICK_START.md  Requirements.txt  USER_GUIDE.md  Utilizing OpenRouter Presets vs.txt  pr_index.md  pyproject.toml  render.yaml  requirements.txt  test_production.py
.cursor/: CURSOR_CONFIGURATION.md  LIVE_TEST_SESSION.md  PR20_AGENT_INSTRUCTIONS.md  PR20_HANDOFF_SUMMARY.md  PR20_TESTER_INSTRUCTIONS.md  PR21_AGENT_INSTRUCTIONS.md  PR21_TESTER_INSTRUCTIONS.md  QUICK_START.md  SAFETY_CHECKLIST.md  TEST_PROMPTS.md  VERIFICATION_REPORT.md  verify_setup.sh
.cursor-tasks/: codebase-fixes.md
.github/: BRANCH_PROTECTION_RULES.md  TEST_MARKING_GUIDE.md
Images1/: ascii-art (1).txt  ascii-art (10).txt  ascii-art (12).txt  ascii-art (14).txt  ascii-art (15).txt  ascii-art (17).txt  ascii-art (18).txt  ascii-art (19).txt  ascii-art (2).txt  ascii-art (20).txt  ascii-art (3).txt  ascii-art (4).txt  ascii-art (6).txt  ascii-art (7).txt  ascii-art (8).txt  ascii-art (9).txt  ascii-art.txt  removed.txt  wremoved.txt
docs/: CI_CONFIGURATION.md
frontend/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
scripts/: cocktail_timings.py  prod_check.py  test_all_cocktails.py  test_luxe_speed.py  test_status.py  validate_contracts.py
tests/: conftest.py  multi_tier_timeout.py  test_active_llms.py  test_addons_processing.py  test_api.py  test_cli.py  test_diagnostics.py  test_fallback_logic.py  test_final_delivery.py  test_initial_round.py  test_integration.py  test_meta_round.py  test_prepopulation.py  test_real_r1_api.py  test_render_deployment.py  test_repo_structure.py  test_statistics.py  test_system_readiness.py  test_timeout_display.py  test_ultrai_synthesis.py  test_user_input.py  timeout_categorizer.py  timeout_markers.py  timeout_status.py  to_15_class.py
trackers/: dependencies.md  names.md
ultrai/: __init__.py  active_llms.py  addons_processing.py  api.py  cli.py  final_delivery.py  initial_round.py  meta_round.py  statistics.py  system_readiness.py  ultrai_synthesis.py  user_input.py
vision/: CONTRIBUTING.md  README.md  UltrAI LLM Orchestration Research & Configuration Report.txt  UltrAI_LLM_Orchestration_Report.txt  UltrAI_OpenRouter.txt  (+1 more)
(+1022 files in other folders)
